--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,18 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# Created by https://www.toptal.com/developers/gitignore/api/jupyternotebooks
+# Edit at https://www.toptal.com/developers/gitignore?templates=jupyternotebooks
 
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
+### JupyterNotebooks ###
+# gitignore template for Jupyter Notebooks
+# website: http://jupyter.org/
 
-# testing
-/coverage
+.ipynb_checkpoints
+*/.ipynb_checkpoints/*
 
-# production
-/build
+# IPython
+profile_default/
+ipython_config.py
 
-# misc
-.DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+# Remove previous ipynb_checkpoints
+#   git rm -r .ipynb_checkpoints/
 
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+# End of https://www.toptal.com/developers/gitignore/api/jupyternotebooks
